k8s/recipes-waylonwalker-com/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recipes-waylonwalker-com
  annotations:
    argocd.argoproj.io/sync-options: Prune=confirm,Delete=confirm
