k8s/recipes-waylonwalker-com/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: recipes-waylonwalker-com
  annotations:
    argocd.argoproj.io/sync-options: Prune=confirm,Delete=confirm
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-02-16T08:08:15-06:00"
      labels:
        app: web
    spec:
      containers:
        - name: builder
          image: ghcr.io/waylonwalker/markata-go-builder:latest
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -ceu
            - |
              [...]
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 128Mi
          volumeMounts:
            - name: webroot
              mountPath: /webroot
            - name: work
              mountPath: /work
            - name: vault
              mountPath: /vault
              readOnly: true
        - name: nginx
          image: nginx:stable-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: webroot
              mountPath: /usr/share/nginx/html
              readOnly: true
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      nodeSelector:
        kubernetes.io/hostname: falcon3
      volumes:
        - name: vault
          hostPath:
            path: /mnt/main/walkershare/waylon/vaults/recipes.waylonwalker.com
            type: DirectoryOrCreate
        - name: work
          emptyDir: {}
        - name: webroot
          persistentVolumeClaim:
            claimName: webroot
        - name: nginx-conf
          configMap:
            name: nginx-conf
