k8s/recipes-waylonwalker-com/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: recipes-waylonwalker-com
  annotations:
    argocd.argoproj.io/sync-options: Prune=confirm,Delete=confirm
  labels:
    app: web
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: web
