k8s/recipes-waylonwalker-com/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: recipes-waylonwalker-com
  annotations:
    argocd.argoproj.io/sync-options: Prune=confirm,Delete=confirm
  labels:
    app: web
spec:
  ingressClassName: traefik
  rules:
    - host: recipes.waylonwalker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
